Fix launcher issues